--- a/GAN/workbook.ipynb
+++ b/GAN/workbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,11 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DataStreamer(object):\n",
+    "    \"\"\"\n",
+    "    Class for reading csv data from the output file of generateconfigs.jl,\n",
+    "    and providing shuffled batching.   \n",
+    "    \"\"\"\n",
     "    def __init__(self, csvfile, fake=False):\n",
     "        with open(csvfile, 'rb') as F:\n",
     "            cleaned_lines = (line.replace(b';',b',') for line in F)\n",
@@ -49,6 +53,8 @@
     "        self.__new_epoch()\n",
     "        logging.info(\"Data shape: \" + str(self.data.shape))\n",
     "\n",
+    "        \"\"\"Here I (conditionally) override the csv data with some 'easy'\n",
+    "           data to test the GAN implementation\"\"\"\n",
     "        if False:\n",
     "            #Single pixel, always in the same place:  SUCCESS\n",
     "            self.data = np.zeros_like(self.data) - 1\n",
@@ -64,16 +70,16 @@
     "        \n",
     "    def __new_epoch(self):\n",
     "        \"\"\"\n",
-    "        Set up a queue of shuffled indices that will be removed as we\n",
-    "        return examples\n",
+    "        Reset the queue of shuffled indices that will be removed as we\n",
+    "        return examples.  Increment the epoch counter.\n",
     "        \"\"\"\n",
     "        self.epoch += 1\n",
     "        indices = np.arange(self.data.shape[0])\n",
     "        np.random.shuffle(indices)\n",
-    "        \n",
     "        self.q = list(indices)\n",
     "    \n",
     "    def next_batch(self, batch_size):\n",
+    "        \"\"\"Return batch_size examples in an array.\"\"\"\n",
     "        batch_data = np.zeros([batch_size,] + list(self.example_shape))\n",
     "        for i in range(batch_size):\n",
     "            index = self.q.pop()\n",
@@ -86,11 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Generator(object):\n",
+    "    \"\"\"\n",
+    "       Construct the generator, taking a batch of random noise vectors and returning\n",
+    "       a tensor representing a batch of generated examples.  Arbitrary tensorflow neural\n",
+    "       network ops can be inserted here.\n",
+    "    \"\"\"\n",
     "    def __init__(self, z, output_shape, scope='G'):\n",
     "        with tf.variable_scope(scope) as scope:\n",
     "            output = z\n",
@@ -106,11 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Discriminator(object):\n",
+    "    \"\"\"\n",
+    "       Construct the Discriminator, taking a batch of \"examples\" (either real or generated) \n",
+    "       and returning an unactivated output indicating how \"real\" the example is considered.\n",
+    "       Since this is unactivated, some refer to this as a \"Critic\" instead of \"Discriminator\".\n",
+    "    \"\"\"\n",
     "    def __init__(self, x_in, scope='D'):\n",
     "        with tf.variable_scope(scope, reuse=tf.AUTO_REUSE) as scope:\n",
     "            output = x_in\n",
@@ -118,18 +134,21 @@
     "            output = tf.layers.dense(output, 256, activation=tf.nn.leaky_relu)\n",
     "            output = tf.layers.dense(output, 512, activation=tf.nn.leaky_relu)\n",
     "            output = tf.layers.dense(output, 1024, activation=tf.nn.leaky_relu)\n",
-    "            output = tf.layers.dense(output, 1, activation=tf.tanh)\n",
+    "            output = tf.layers.dense(output, 1, activation=None)\n",
     "            self.output = output\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Random(object):\n",
+    "    \"\"\"\n",
+    "    Simple class for generating random latent noise.\n",
+    "    \"\"\"\n",
     "    def __init__(self):\n",
     "        pass\n",
     "    def sample(self, shape):\n",
@@ -138,11 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Visualiser(object):\n",
+    "    \"\"\"\n",
+    "    Simple plotting helper to plot some ground truth training examples beside the generator\n",
+    "    output.  Use threshold=True to 'snap' the plot to -1 and 1.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    def __init__(self, batch_size):\n",
     "        self.batch_size = batch_size\n",
     "        pass\n",
@@ -169,12 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Here we instantiate and connect the pieces, define the loss functions, \n",
+    "perform the weight clipping (for WGAN) on the discriminator, and set up the optimizer.\n",
+    "\"\"\"\n",
+    "\n",
     "tf.reset_default_graph()\n",
     "\n",
     "S = DataStreamer(\"../ising.csv\")\n",
@@ -208,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +286,15 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Now the actual training.\n",
+    "\"\"\"\n",
     "\n",
+    "\"\"\"\n",
+    "Generate a random vector that will be used for plotting (so we can see the evolution\n",
+    "of the generator on the same latent input.  Additionally we want the ground truth data\n",
+    "to be the same in every frame.\n",
+    "\"\"\"\n",
     "static_random = R.sample(z_ph.shape)\n",
     "ground_truth = S.next_batch(BATCH_SIZE)\n",
     "\n",
