one more update

--- a/GAN/workbook.ipynb
+++ b/GAN/workbook.ipynb
@@ -322,11 +322,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Results:\n",
+    "\n",
+    "After 10-ish minutes of training (~850 epochs), it arrives at something that doesn't look\n",
+    "_completely_ wrong at first glance.  More work to be done though."
+   ]
   },
   {
    "cell_type": "code",
